# Running-Threadx-OS-on-Raspberry-Pi-PICO

./: CMakeLists.txt  README.md
src/: main.c  tx_initialize_low_level.S
